syntax = "proto3";

package pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;

message Transaction {
    uint64 ID = 1
    [
        (gogoproto.jsontag) = "id,omitempty",
        (gogoproto.moretags) = "gorm:\"primary_key\" deepequal:\"-\""
    ];

    string hash = 2
    [
        (gogoproto.jsontag) = "hash,omitempty",
        (gogoproto.moretags) = "gorm:\"column:hash;size:255\""
    ];

    string from = 4
    [
        (gogoproto.jsontag) = "from,omitempty",
        (gogoproto.moretags) = "gorm:\"column:from;size:255\""
    ];

    string to = 5
    [
        (gogoproto.jsontag) = "to,omitempty",
        (gogoproto.moretags) = "gorm:\"column:to;size:255\""
    ];

    bytes nonce = 6
    [
        (gogoproto.jsontag) = "nonce,omitempty",
        (gogoproto.moretags) = "gorm:\"column:nonce\""
    ];

    int64 gas_price = 7
    [
        (gogoproto.jsontag) = "gas_price,omitempty",
        (gogoproto.moretags) = "gorm:\"column:gas_price\""
    ];

    uint64 gas_limit = 8
    [
        (gogoproto.jsontag) = "gas_limit,omitempty",
        (gogoproto.moretags) = "gorm:\"column:gas_limit\""
    ];

    int64 amount = 9
    [
        (gogoproto.jsontag) = "amount,omitempty",
        (gogoproto.moretags) = "gorm:\"column:amount\""
    ];

    bytes payload = 10
    [
        (gogoproto.jsontag) = "payload,omitempty",
        (gogoproto.moretags) = "gorm:\"column:payload\""
    ];

    int64 v = 11
    [
        (gogoproto.jsontag) = "v,omitempty",
        (gogoproto.moretags) = "gorm:\"column:v\""
    ];

    int64 r = 12
    [
        (gogoproto.jsontag) = "r,omitempty",
        (gogoproto.moretags) = "gorm:\"column:r\""
    ];

    int64 s = 13
    [
        (gogoproto.jsontag) = "s,omitempty",
        (gogoproto.moretags) = "gorm:\"column:s\""
    ];
}
